deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exp-state
  labels:
    app.kubernetes.io/name: exp-state
    app.kubernetes.io/instance: exp-state
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: test-system
    app.kubernetes.io/managed-by: manual
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: exp-state
